--- a/publications.html
+++ b/publications.html
@@ -84,7 +84,14 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
-            <li>ROMBAUT, B., COGO, F., ADAMS, B. and HASSAN, A.E. (2022). <a hname="greenkeeper">Lessons learned from
+        <li>LIN, J., ZHANG, H., ADAMS, B. and HASSAN, A.E. (2022). <a hname="emse_upstream">Upstream
+                Bug Management in Linux Distributions - An Empirical Study of Debian and Fedora Practices
+            </a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a
+                href="publications/2022/emse_upstream.bib"><i>BibTeX</i></a></li>
+        <li>FOUNDJEM, A., CONSTANTINOU, E., MENS, T. and ADAMS, B. (2022). <a href="publications/2022/emse_micro.pdf">A
+                mixed-methods analysis of micro-collaborative coding practices in OpenStack
+        </a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a href="publications/2022/emse_micro.bib"><i>BibTeX</i></a></li>
+        <li>ROMBAUT, B., COGO, F., ADAMS, B. and HASSAN, A.E. (2022). <a hname="greenkeeper">Lessons learned from
                     exploring the overhead introduced by the Greenkeeper dependency bot</a>, Transactions on Software
                 Engineering and Methodology (TOSEM), ACM, to appear.&nbsp;<a
                     href="publications/2022/tosem_ben.bib"><i>BibTeX</i></a></li>
@@ -121,7 +128,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                 197/751=26.23%)&nbsp;<a href="publications/2022/icse22.bib"><i>BibTeX</i></a>
             </li>
             <li>
-                FERREIRA, I., ADAMS, B. and CHENG, J. (2022). <a hname="msr22">How heated is it? Understanding GitHub
+                FERREIRA, I., ADAMS, B. and CHENG, J. (2022). <a href="https://arxiv.org/abs/2204.00155">How heated is it?
+                    Understanding GitHub
                     locked issues</a>, in Proceedings of the 19th International Conference on Mining Software
                 Repositories, MSR (Pittsburgh, PA, USA), to appear. (Acceptance ratio: 47/137=34.3%)&nbsp;<a
                     href="publications/2022/msr22.bib"><i>BibTeX</i></a>
