--- a/bram.html
+++ b/bram.html
@@ -766,12 +766,10 @@ title: Dr. Bram Adams
         <ul>
             <li><a href="https://www.youtube.com/watch?v=yQqt6mH09fg">Big Data @ Campus Montr&eacute;al</a> (also <a
                     href="https://www.youtube.com/watch?v=yMIe-fTFqnk">in French</a>), commercial, September, 2014.</li>
-            <li><a href="http://campus-montreal.ca/en/talent-gallery/bram-adams/">What would your world cup aspirations
-                    be?</a>, Campus Montr&eacute;al Talent Gallery, September, 2014.</li>
-            <li><a
-                    href="http://affaires.lapresse.ca/portfolio/mobilite-pour-pme/201306/05/01-4657942-super-moteur-de-recherche-pour-pme.php">Super
+            <li><a href="https://www.lapresse.ca/affaires/portfolio/201306/05/01-4657942-super-moteur-de-recherche-pour-pme.php">Super
                     moteur de recherche pour PME</a>, interview with Guy Paquin of La Presse, June 5, 2013.</li>
-            <li><a href="http://affaires.lapresse.ca/cv/201209/10/01-4572598-globalink-ouvre-montreal-sur-le-monde.php">Globalink
+            <li><a
+                    href="https://www.lapresse.ca/affaires/economie/emploi/201209/10/01-4572598-globalink-ouvre-montreal-sur-le-monde.php">Globalink
                     ouvre Montr&eacute;al sur le monde</a>, interview with Martine Letarte of La Presse, September 10,
                 2012.</li>
         </ul>
