Adding my new picture.

--- a/people.html
+++ b/people.html
@@ -15,7 +15,7 @@ title: Who are these MCIS people?
         <div class="who">
             <table border="0" width="100%">
                 <tr>
-                    <td width="140" class="who" align="right"><img src="images/me2019.jpeg" height="140" /></td>
+                    <td width="140" class="who" align="right"><img src="images/me2023_wide.jpg" height="140" /></td>
                     <td width="80" align="left"><a href="bram.html">Dr. Bram Adams</a></td>
                     <td width="440" />
                 </tr>
