--- a/people.html
+++ b/people.html
@@ -61,7 +61,7 @@ title: Who are these MCIS people?
         <div class="who">
             <table border="0" width="100%">
                 <tr>
-                    <td width="140" align="right" class="who"><img src="images/mcis.png" height="140" /></td>
+                    <td width="140" align="right" class="who"><img src="images/maryam.jpeg" height="140" /></td>
                     <td width="80" align="left">Maryam Abedi<br />Master's student<br />(with <a
                             href="https://jhcheng.me/">Dr. Jinghui Cheng</a>)</td>
                     <td width="140" align="right" class="who"><img src="images/vincent.jpg" height="140" /></td>
