Making contact information more explicit.

--- a/join.html
+++ b/join.html
@@ -9,8 +9,8 @@ title: Join the Lab on Maintenance, Construction and Intelligence of Software (M
         <p>If you recognize yourself in the vision behind MCIS, and are interested in a PhD or Master's degree, or you
             would like to be a research intern, work on a project or cook for us, don't hesitate to contact us at
             <script
-                type='text/javascript'>var a = new Array('gmail.com', 'lab.mcis@'); document.write("<a href='mailto:" + a[1] + a[0] + "'>" + a[1] + a[0] + "</a>");</script>
-            <noscript><a href="mailto:lab DOT mcis WHAT gmail DOT com">lab DOT mcis WHAT gmail DOT com</a><i>(DOT=. and
+                type='text/javascript'>var a = new Array('queensu.ca', 'bram.adams@'); document.write("<a href='mailto:" + a[1] + a[0] + "'>" + a[1] + a[0] + "</a>");</script>
+            <noscript><a href="mailto:bram DOT adams WHAT queensu DOT ca">bram DOT adams WHAT queensu DOT ca</a><i>(DOT=. and
                     WHAT=@)</i></noscript> (see below)! Don't worry about our reaction, we respect you and will look at
             your file. If we think things might not work out, we will still provide you with feedback.
         </p>
@@ -29,8 +29,8 @@ title: Join the Lab on Maintenance, Construction and Intelligence of Software (M
         <br />
         <p>If you're still interested, contact us at
             <script
-                type='text/javascript'>var a = new Array('gmail.com', 'lab.mcis@'); document.write("<a href='mailto:" + a[1] + a[0] + "'>" + a[1] + a[0] + "</a>");</script>
-            <noscript><a href="mailto:lab DOT mcis WHAT gmail DOT com">lab DOT mcis WHAT gmail DOT com</a><i>(DOT=. and
+                type='text/javascript'>var a = new Array('queensu.ca', 'bram.adams@'); document.write("<a href='mailto:" + a[1] + a[0] + "'>" + a[1] + a[0] + "</a>");</script>
+            <noscript><a href="mailto:bram DOT adams WHAT queensu DOT ca">bram DOT adams WHAT queensu DOT ca</a><i>(DOT=. and
                     WHAT=@)</i></noscript>, providing us with:
         <ul class="join">
             <li>your CV</li>
@@ -73,9 +73,8 @@ title: Join the Lab on Maintenance, Construction and Intelligence of Software (M
                         Canada<br /><br />
                     <p>
                         <script
-                            type='text/javascript'>var a = new Array('gmail.com', 'lab.mcis@'); document.write("<a href='mailto:" + a[1] + a[0] + "'>" + a[1] + a[0] + "</a>");</script>
-                        <noscript><a href="mailto:lab DOT mcis WHAT gmail DOT com">lab DOT mcis WHAT gmail DOT
-                                com</a><i>(DOT=. and WHAT=@)</i></noscript>
+                            type='text/javascript'>var a = new Array('queensu.ca', 'bram.adams@'); document.write("<a href='mailto:" + a[1] + a[0] + "'>" + a[1] + a[0] + "</a>");</script>
+                        <noscript><a href="mailto:bram DOT adams WHAT queensu DOT ca">bram DOT adams WHAT queensu DOT ca</a><i>(DOT=. and WHAT=@)</i></noscript>
                     </p>
                     <br /><br />
 
