--- a/bram.html
+++ b/bram.html
@@ -136,10 +136,21 @@ title: Dr. Bram Adams
         <h3>Chair:</h3>
         <p>
         <ul>
-            <li>Area co-chair (together with <a href="https://kblincoe.github.io/index.html">Kelly Blincoe</a>) for
+            <li>most influential paper co-chair (together with <a
+                    href="https://sites.google.com/view/juergenrilling/home">Juergen
+                    Rilling</a>) of the <a href="https://www.ieee-scam.org/2023/">23rd IEEE International Working
+                    Conference on
+                    Source Code Analysis and Manipulation (SCAM)</a>, October 2-3, 2023 (Bogot&aacute;, Colombia)</li>
+            <li>tool demo co-chair (together with <a href="https://soft.vub.ac.be/~cderoove/">Coen De Roover</a>) of the
+                <a href="https://conf.researchr.org/home/icsme-2023">39th IEEE International Conference on Software
+                    Maintenance and Evolution (ICSME)</a>, October 1-6, 2023 (Bogot&aacute;, Colombia)</li>
+            <li>area co-chair (together with <a href="https://kblincoe.github.io/index.html">Kelly Blincoe</a>) for
                 Software Analytics of the <a href="https://conf.researchr.org/home/icse-2023">45th International
-                    Conference on Software Engineering (ICSE)</a>, 2023 (Melbourne, Australia)</li>
-            <li>Vision and Reflection co-chair</a> of the <a href="https://conf.researchr.org/home/msr-2022/">19th
+                    Conference on Software Engineering (ICSE)</a>, May 17-19, 2023 (Melbourne, Australia)</li>
+            <li>tutorial co-chair (together with <a href="https://www.win.tue.nl/~aserebre/">Alexander Serebrenik</a>)
+                of the <a href="https://conf.researchr.org/home/msr-2023">20th
+                    Working Conf. on Mining Software Repositories (MSR)</a>, May 15-16, 2023 (Melbourne, Australia)</li>
+            <li>vision and reflection co-chair</a> of the <a href="https://conf.researchr.org/home/msr-2022/">19th
                     Working Conf. on Mining Software Repositories (MSR)</a>, May 22-23, 2022 (virtual)</li>
             <li>PC co-chair (together with <a href="https://www.cs.fsu.edu/~shaiduc/">Sonia Haiduc</a>) of the <a
                     href="https://conf.researchr.org/home/msr-2019">16th International Conference on Mining Software
@@ -157,7 +168,8 @@ title: Dr. Bram Adams
             <li>PC co-chair (together with <a href="http://www.win.tue.nl/~aserebre/">Alexander Serebrenik</a>) of the
                 <a href="http://saner.soccerlab.polymtl.ca/doku.php?id=en:start">22nd International Conference on
                     Software Analysis, Evolution and Reengineering (SANER)</a>, March 2-6, 2015 (Montr&eacute;al,
-                Canada)</li>
+                Canada)
+            </li>
             <li>tool demo co-chair (together with <a href="http://www.cs.fsu.edu/~shaiduc/">Sonia Haiduc</a>) of the <a
                     href="https://dibt.unimol.it/ICPC15/Home.html">23rd International Conference on Program
                     Comprehension (ICPC)</a>, May 18-19, 2015 (Florence, Italy)</li>
@@ -175,7 +187,8 @@ title: Dr. Bram Adams
                 Canada)</li>
             <li>ERA track co-chair (together with <a href="http://www.inf.usi.ch/phd/robbes/">Romain Robbes</a>) of the
                 <a href="http://icsm2013.tue.nl">29th IEEE Intl. Conf. on Software Maintenance (ICSM)</a>, September
-                24-26, 2013 (Eindhoven, The Netherlands)</li>
+                24-26, 2013 (Eindhoven, The Netherlands)
+            </li>
             <li>PC co-chair (together with <a href="http://www.cs.concordia.ca/~rilling/">Juergen Rilling</a>) of the <a
                     href="http://www.ieee-scam.org/2013/">13th IEEE International Working Conference on Source Code
                     Analysis and Manipulation (SCAM)</a>, September 22-23, 2013 (Eindhoven, The Netherlands)</li>
@@ -215,6 +228,8 @@ title: Dr. Bram Adams
         <h3>Co-organizer:</h3>
         <p>
         <ul>
+            <li><a href="https://fmse.io">FM+SE Vision 2030</a>, November 16-19, 2023 (Mexico City, Mexico)</li>
+            <li><a href="https://fmse.io/school/">FM+SE School</a>, November 16-17, 2023 (Mexico City, Mexico)</li>
             <li><a href="https://soheal.github.io">2nd International Workshop on Software Health (SoHeal)</a>, May 28,
                 2019 (Montr&eacute;al, Quebec), co-located with <a href="https://conf.researchr.org/home/icse-2019">ICSE
                     2019</a></li>
@@ -264,12 +279,30 @@ title: Dr. Bram Adams
         <h3>PC Member</h3>
         <p>
         <ul>
+            <li><a href="https://conf.researchr.org/home/msr-2024">21st Working Conf. on Mining Software
+                    Repositories (MSR)</a>, April
+                15-16, 2023 (Lisbon, Portugal)</li>
+            <li><a href="https://conf.researchr.org/home/fse-2023">31st ACM Joint European Software
+                    Engineering Conference and
+                    Symposium on the Foundations of Software Engineering (ESEC/FSE)</a>, December 3-9, 2023 (San
+                Francisco, CA, USA)
+            </li>
+            <li><a href="https://conf.researchr.org/home/esem-2023">17th International
+                    Symposium on Empirical Software
+                    Engineering and Measurement (ESEM)</a>, September 26-27, 2023 (New Orleans, LA, USA)</li>
+            <li><a href="https://conf.researchr.org/track/msr-2023/msr-2023-mining-challenge?">Mining Challenge</a>
+                track of the <a href="https://conf.researchr.org/home/msr-2023">20th Working Conf. on Mining Software
+                    Repositories (MSR)</a>, April
+                15-16, 2023 (Lisbon, Portugal)</li>
             <li><a href="https://conf.researchr.org/home/ase-2022">37th IEEE/ACM International Conference on Automated
                     Software Engineering (ASE)</a>, September 26-October 1, 2022 (Ann Arbor, MI, USA) </li>
             <li><a href="https://conf.researchr.org/home/icpc-2022">30th IEEE International Conference on Program
                     Comprehension (ICPC)</a>, May 16-17, 2022 (virtual)</li>
             <li><a href="https://conf.researchr.org/home/cain-2022">1st International Conference on AI Engineering --
                     Software Engineering for AI (CAIN)</a>, May 16-17, 2022 (virtual)</li>
+            <li><a href="https://saner2022.uom.gr/">29th International Conference on Software
+                    Analysis,
+                    Evolution and Reengineering (SANER)</a>, March 15-18, 2022 (virtual)</li>
             <li><a href="https://luxsb.lu/international-conference-ai-ss-h/">1st International Conference on the
                     relation between Artificial Intelligence, Social Sciences and Humanities</a>, October 1, 2021
                 (Zagreb, Croatia)</li>
@@ -293,26 +326,20 @@ title: Dr. Bram Adams
             <li><a href="https://2021.msrconf.org/track/msr-2021-shadow-pc?">Mentor of the Shadow PC</a> of the <a
                     href="https://2021.msrconf.org/">18th Working Conf. on Mining Software Repositories (MSR)</a>, May
                 17-19, 2021 (virtual)</li>
-
             <li><a href="https://2020.esec-fse.org/">28th ACM Joint European Software Engineering Conference and
                     Symposium on the Foundations of Software Engineering (ESEC/FSE)</a>, November 10-13, 2020 (virtual)
             </li>
-
             <li><a href="https://splc2020.net/"> 24th ACM International Systems and Software Product Line Conference
                     (SPLC)</a>, October 19-23, 2020 (virtual)</li>
-
             <li><a href="http://www.ieee-scam.org/2020/#niercall">New Ideas and Emerging Results (NIER)</a> track of the
                 <a href="http://www.ieee-scam.org/2020">20th IEEE Intl. Working Conf. on Source Code Analysis and
-                    Manipulation (SCAM)</a>, September 27-28, 2020 (virtual)</li>
-
+                    Manipulation (SCAM)</a>, September 27-28, 2020 (virtual)
+            </li>
             <li><a href="http://2020.qudos-workshop.org/">6th International Workshop on Quality-Aware DevOps (QUDOS
                     2020), joint with the 5th Workshop on Continuous Software Engineering (CSE)</a>, September 15, 2020
                 (virtual), co-located with <a href="https://ecsa2020.disim.univaq.it/">ECSA 2020</a></li>
-
             <li><a href="https://affectre.github.io/2020/">3rd International Workshop on Affective Computing for
                     Requirements Engineering (AffectRE)</a>, September 1, 2020 (virtual)</li>
-
-
             <li><a href="https://conf.researchr.org/track/icpc-2020/icpc-2020-era?">Early Research Achievements
                     (ERA)</a> track of the <a href="https://conf.researchr.org/home/icpc-2020">28th IEEE International
                     Conference on Program Comprehension (ICPC)</a>, July 13-15, 2020 (virtual)</li>
@@ -326,7 +353,6 @@ title: Dr. Bram Adams
             <li><a href="https://2020.msrconf.org/track/msr-2020-MSR-Awards?">Awards Committee</a> of the <a
                     href="https://2020.msrconf.org/">17th Working Conf. on Mining Software Repositories (MSR)</a>, June
                 29-30, 2020 (virtual)</li>
-
             <li><a href="https://icsme2019.github.io">35th International Conference on Software Maintenance and
                     Evolution (ICSME)</a>, October 2-4, 2019 (Cleveland, OH, US)</li>
             <li><a href="http://www.ieee-scam.org/2019/">19th IEEE Intl. Working Conf. on Source Code Analysis and
@@ -430,14 +456,16 @@ title: Dr. Bram Adams
                     Collaborative Research (CASCON)</a>, November 2-4, 2015 (Markham, Ontario, Canada)</li>
             <li><a href="http://sysrun.haifa.il.ibm.com/hrl/mobiledeli2015/">3rd International Workshop on Mobile
                     Development Lifecycle (MobileDeli)</a>, October 2015 (Pittsburgh, Pennsylvania, US), co-located with
-                <a href="http://2015.splashcon.org/">SPLASH 2015</a></li>
+                <a href="http://2015.splashcon.org/">SPLASH 2015</a>
+            </li>
             <li><a href="http://eseiw.iscas.ac.cn/eseiw2015/esem/">9th International Symposium on Empirical Software
                     Engineering and Measurement (ESEM)</a>, October 22-23, 2015 (Beijing, China)</li>
             <li><a href="http://www.icsme.uni-bremen.de/">31st International Conference on Software Maintenance and
                     Evolution (ICSME)</a>, September 29-October 1, 2015 (Bremen, Germany)</li>
             <li><a href="http://www.icsme.uni-bremen.de/cfp_era.php">Early Research Achievements (ERA)</a> track of the
                 <a href="http://www.icsme.uni-bremen.de/">31st International Conference on Software Maintenance and
-                    Evolution (ICSME)</a>, September 29-October 1, 2015 (Bremen, Germany)</li>
+                    Evolution (ICSME)</a>, September 29-October 1, 2015 (Bremen, Germany)
+            </li>
             <li><a href="http://www.ieee-scam.org/2015/">15th IEEE Intl. Working Conf. on Source Code Analysis and
                     Manipulation (SCAM)</a>, September 27-28, 2015 (Bremen, Germany)</li>
             <li><a href="http://iwpse15.libresoft.es/">14th Intl. Workshop on Principles of Software Evolution
@@ -463,7 +491,8 @@ title: Dr. Bram Adams
                     Collaborative Research (CASCON)</a>, November 3-5, 2014 (Markham, Ontario, Canada)</li>
             <li><a href="http://sysrun.haifa.il.ibm.com/hrl/mobiledeli2014/events.shtml">2nd International Workshop on
                     Mobile Development Lifecycle (MobileDeli)</a>, October 2014 (Portland, Oregon, US), co-located with
-                <a href="http://2014.splashcon.org/">SPLASH 2014</a></li>
+                <a href="http://2014.splashcon.org/">SPLASH 2014</a>
+            </li>
             <li><a href="http://www.icsme.org/">30th International Conference on Software Maintenance and Evolution
                     (ICSME)</a>, September 28-October 3, 2014 (Victoria, BC, Canada)</li>
             <li><a href="http://www.icsme.org/call-for-papers/era-track-cfp">Early Research Achievements (ERA)</a> track
@@ -471,7 +500,8 @@ title: Dr. Bram Adams
                     Evolution (ICSME)</a>, September 28-October 3, 2014 (Victoria, BC, Canada)</li>
             <li><a href="http://www.icsme.org/call-for-papers/tool-demo-track-cfp">Tool demonstration</a> track of the
                 <a href="http://www.icsme.org/">30th International Conference on Software Maintenance and Evolution
-                    (ICSME)</a>, September 28-October 3, 2014 (Victoria, BC, Canada)</li>
+                    (ICSME)</a>, September 28-October 3, 2014 (Victoria, BC, Canada)
+            </li>
             <li><a href="http://www.ieee-scam.org/2014/">14th IEEE Intl. Working Conf. on Source Code Analysis and
                     Manipulation (SCAM)</a>, September 28-29, 2014 (Victoria, BC, Canada)</li>
             <li><a href="http://www.ssrg.nicta.com.au/conferences/dsso-14/">1st Intl. Workshop on Dependability and
@@ -551,7 +581,8 @@ title: Dr. Bram Adams
                     Manipulation (SCAM)</a>, September 25-26, 2011 (Williamsburg, VA, USA)</li>
             <li><a href="http://www.cs.wm.edu/icsm2011/?page_id=281">Early Research Achievements (ERA)</a> track of the
                 <a href="http://www.cs.wm.edu/icsm2011/">27th IEEE Intl. Conf. on Software Maintenance (ICSM)</a>,
-                September 25-October 1, 2011 (Williamsburg, VA, USA)</li>
+                September 25-October 1, 2011 (Williamsburg, VA, USA)
+            </li>
             <li>tool demo track of the <a href="http://2011.esec-fse.org/">8th joint meeting of the European Software
                     Engineering Conf. and the ACM SIGSOFT Symposium on the Foundations of Software Engineering
                     (ESEC/FSE)</a>, September 5-9, 2011 (Szeged, Hungary)</li>
@@ -634,14 +665,14 @@ title: Dr. Bram Adams
         <h3>Other:</h3>
         <p>
         <ul>
-            <li>Associate editor of the <a
-                    href="https://www.journals.elsevier.com/journal-of-systems-and-software/">Journal of Systems and
-                    Software (JSS)</a></li>
             <li>Member of the editorial board of the <a href="https://link.springer.com/journal/10664">Journal on
                     Empirical Software Engineering (EMSE)</a></li>
             <li>Member of the editorial board of the <a
                     href="https://www.journals.elsevier.com/information-and-software-technology/">Journal on Information
                     and Software Technology (IST)</a></li>
+            <li>Former associate editor of the <a
+                    href="https://www.journals.elsevier.com/journal-of-systems-and-software/">Journal of Systems and
+                    Software (JSS)</a></li>
             <li>Member of the steering committee of the <a href="http://msrconf.org/">International Conference on Mining
                     Software Repositories (MSR)</a></li>
             <li>Former member of the steering committee of the <a href="http://saner.aau.at/">IEEE International
@@ -659,6 +690,12 @@ title: Dr. Bram Adams
         <h1><a name="invited">Invited Talks:</a></h1>
         <p>
         <ul>
+            <li>Release Engineering in the AI World: How can Analytics Help?, Invited talk at the <a
+                    href="http://informatique.umons.ac.be/">Institut
+                    d'Informatique</a>, Universit&eacute; de Mons (Belgium), May 8, 2023.</li>
+            <li>Release Engineering in the AI World: How can Analytics Help?,
+                Keynote at the <a href="https://promiseconf.github.io/2022/">18th International Conference on Predictive
+                    Models and Data Analytics in Software Engineering (PROMISE)</a>, November 18, 2022 (virtual).</li>
             <li>Release Engineering in the AI World, inaugural distinguished seminar at the <a
                     href="https://www.concordia.ca/research/software-engineering-research-centre-serc.html/">Software
                     Engineering Research Centre</a>, Concordia University, July 7, 2021 (virtual). <span
@@ -707,7 +744,8 @@ title: Dr. Bram Adams
             <li>So, you are saying that our software quality was screwed up by … the release engineer?!, Invited talk at
                 <a
                     href="http://www.open.ac.uk/postgraduate/research-degrees/research-areas/computing-and-communications">Department
-                    of Computing and Communications, Open University</a>, October 30, 2014 (Milton Keynes, UK).</li>
+                    of Computing and Communications, Open University</a>, October 30, 2014 (Milton Keynes, UK).
+            </li>
             <li>Mobile Apps: Research Challenges, Invited talk (with <a
                     href="http://research.cs.queensu.ca/~ahmed/home/">Ahmed E. Hassan</a>) at <a
                     href="http://crest.cs.ucl.ac.uk/cow/36/">the 36th CREST Open Workshop on "App Store Analysis"</a>,
@@ -719,7 +757,8 @@ title: Dr. Bram Adams
                     href="http://informatique.umons.ac.be/genlog/benevol2013">BElgian-NEtherlands software eVOLution
                     symposium (BENEVOL)</a>, December 16, 2013 (Mons, Belgium).</li>
             <li>So, you are saying that our software quality was screwed up by … the release engineer?!, Invited talk at
-                <a href="http://msrsummit2013.se-naist.jp/">MSR Asia Summit</a>, October 28, 2013 (Kyoto, Japan).</li>
+                <a href="http://msrsummit2013.se-naist.jp/">MSR Asia Summit</a>, October 28, 2013 (Kyoto, Japan).
+            </li>
             <li>On Rapid Releases and Software Testing, Invited talk at <a
                     href="http://shonan.nii.ac.jp/seminar/037/">NII Shonan Meeting on "Software Analytics: Principles
                     and Practice"</a>, October 21, 2013 (Tokyo, Japan).</li>
@@ -766,7 +805,8 @@ title: Dr. Bram Adams
         <ul>
             <li><a href="https://www.youtube.com/watch?v=yQqt6mH09fg">Big Data @ Campus Montr&eacute;al</a> (also <a
                     href="https://www.youtube.com/watch?v=yMIe-fTFqnk">in French</a>), commercial, September, 2014.</li>
-            <li><a href="https://www.lapresse.ca/affaires/portfolio/201306/05/01-4657942-super-moteur-de-recherche-pour-pme.php">Super
+            <li><a
+                    href="https://www.lapresse.ca/affaires/portfolio/201306/05/01-4657942-super-moteur-de-recherche-pour-pme.php">Super
                     moteur de recherche pour PME</a>, interview with Guy Paquin of La Presse, June 5, 2013.</li>
             <li><a
                     href="https://www.lapresse.ca/affaires/economie/emploi/201209/10/01-4572598-globalink-ouvre-montreal-sur-le-monde.php">Globalink
