--- a/bram.html
+++ b/bram.html
@@ -143,14 +143,16 @@ title: Dr. Bram Adams
                     Source Code Analysis and Manipulation (SCAM)</a>, October 2-3, 2023 (Bogot&aacute;, Colombia)</li>
             <li>tool demo co-chair (together with <a href="https://soft.vub.ac.be/~cderoove/">Coen De Roover</a>) of the
                 <a href="https://conf.researchr.org/home/icsme-2023">39th IEEE International Conference on Software
-                    Maintenance and Evolution (ICSME)</a>, October 1-6, 2023 (Bogot&aacute;, Colombia)</li>
+                    Maintenance and Evolution (ICSME)</a>, October 1-6, 2023 (Bogot&aacute;, Colombia)
+            </li>
             <li>area co-chair (together with <a href="https://kblincoe.github.io/index.html">Kelly Blincoe</a>) for
                 Software Analytics of the <a href="https://conf.researchr.org/home/icse-2023">45th International
                     Conference on Software Engineering (ICSE)</a>, May 17-19, 2023 (Melbourne, Australia)</li>
             <li>tutorial co-chair (together with <a href="https://www.win.tue.nl/~aserebre/">Alexander Serebrenik</a>)
                 of the <a href="https://conf.researchr.org/home/msr-2023">20th
                     Working Conf. on Mining Software Repositories (MSR)</a>, May 15-16, 2023 (Melbourne, Australia)</li>
-            <li>vision and reflection co-chair</a> of the <a href="https://conf.researchr.org/home/msr-2022/">19th
+            <li>vision and reflection co-chair (together with <a href="https://sites.google.com/view/mambalab">Shaowei
+                    Wang</a>)</a> of the <a href="https://conf.researchr.org/home/msr-2022/">19th
                     Working Conf. on Mining Software Repositories (MSR)</a>, May 22-23, 2022 (virtual)</li>
             <li>PC co-chair (together with <a href="https://www.cs.fsu.edu/~shaiduc/">Sonia Haiduc</a>) of the <a
                     href="https://conf.researchr.org/home/msr-2019">16th International Conference on Mining Software
