--- a/bram.html
+++ b/bram.html
@@ -295,7 +295,7 @@ title: Dr. Bram Adams
             <li><a href="https://conf.researchr.org/track/msr-2023/msr-2023-mining-challenge?">Mining Challenge</a>
                 track of the <a href="https://conf.researchr.org/home/msr-2023">20th Working Conf. on Mining Software
                     Repositories (MSR)</a>, April
-                15-16, 2023 (Lisbon, Portugal)</li>
+                15-16, 2023 (Melbourne, Australia)</li>
             <li><a href="https://conf.researchr.org/home/ase-2022">37th IEEE/ACM International Conference on Automated
                     Software Engineering (ASE)</a>, September 26-October 1, 2022 (Ann Arbor, MI, USA) </li>
             <li><a href="https://conf.researchr.org/home/icpc-2022">30th IEEE International Conference on Program
