--- a/bram.html
+++ b/bram.html
@@ -298,6 +298,10 @@ title: Dr. Bram Adams
                 15-16, 2023 (Melbourne, Australia)</li>
             <li><a href="https://conf.researchr.org/home/ase-2022">37th IEEE/ACM International Conference on Automated
                     Software Engineering (ASE)</a>, September 26-October 1, 2022 (Ann Arbor, MI, USA) </li>
+            <li><a href="https://conf.researchr.org/track/msr-2023/msr-2023-mining-challenge?">MSR Awards</a>
+                committee of the <a href="https://conf.researchr.org/home/msr-2022">19th Working Conf. on Mining Software
+                    Repositories (MSR)</a>, May
+                18-20, 2022 (Pittsburgh, PA, USA)</li>
             <li><a href="https://conf.researchr.org/home/icpc-2022">30th IEEE International Conference on Program
                     Comprehension (ICPC)</a>, May 16-17, 2022 (virtual)</li>
             <li><a href="https://conf.researchr.org/home/cain-2022">1st International Conference on AI Engineering --
