Adding Justina's EMSE paper, and ICSE 2017 replication package.

--- a/publications.html
+++ b/publications.html
@@ -85,6 +85,11 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
+            <li>LIN, J., ADAMS, B. and HASSAN, A.E. (2023). <a href="publications/2023/emse_justina_cna.pdf">On the Coordination of
+                    Vulnerability Fixes - An Empirical Study of Practices from 13 CVE Numbering
+                    Authorities
+                </a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a
+                    href="publications/2023/emse_justina_cna.bib"><i>BibTeX</i></a></li>
             <li>BAJAJ, R., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2023). <a
                     href="publications/2023/emse_rahul.pdf">Unreproducible builds: Time to fix, causes, and correlation
                     with
@@ -534,7 +539,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
             <li>
                 SAYAGH, M., KERZAZI, N. and ADAMS, B. (2017). <a href="publications/2017/icse.pdf">On Cross-stack
                     Configuration Errors</a>, in Proceedings of the 39th International Conference on Software
-                Engineering, ICSE (Buenos Aires, Argentina), pages 255-265 . (Acceptance ratio: 68/398=17%)&nbsp;<a
+              Engineering, ICSE (Buenos Aires, Argentina), pages 255-265. [<a href="publications/2017/icse2017_data.zip">replication package</a>] (Acceptance ratio: 68/398=17%)&nbsp;<a
                     href="publications/2017/icse.bib"><i>BibTeX</i></a>
             </li>
             <li>
