--- a/publications.html
+++ b/publications.html
@@ -154,7 +154,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Other</h3>
         <ul>
-            <li>ADAMS, B. (2023). Foreword of Software Ecosystems: Tooling and Analytics, edited by Tom Mens, Coen De
+          <li>ADAMS, B. (2023). <a href="https://link.springer.com/content/pdf/bfm:978-3-031-36060-2/1?pdf=chapter%20toc">Foreword</a>
+                    of Software Ecosystems: Tooling and Analytics, edited by Tom Mens, Coen De
                 Roover and Anthony Cleve, 1st ed., p. vii-ix, Springer</li>
         </ul>
         <br /><br /><br /><br />
