--- a/publications.html
+++ b/publications.html
@@ -8,6 +8,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <div class="subnav">
             <h5>Navigation</h5>
             <ul>
+                <li><a href="#2024">2024</a></li>
                 <li><a href="#2023">2023</a></li>
                 <li><a href="#2022">2022</a></li>
                 <li><a href="#2021">2021</a></li>
@@ -81,29 +82,57 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
     </div>
 
     <div class="content">
+        <h2><a name="2024"></a>2024</h2>
+        <br />
+        <h3>Journal</h3>
+        <ul>
+            <li>
+                OREAMUNO, E.L., KHAN, R.F., BANGASH, A.A., STINSON, C. and ADAMS, B. (2024). <a
+                    href="publications/2024/ieeesw-ernesto.pdf">The
+                    State of Documentation Practices of Third-party Machine Learning Models and Datasets</a>, IEEE Software, IEEE,
+                to appear.&nbsp;<a href="publications/2024/ieeesw-ernesto.bib"><i>BibTeX</i></a>
+            </li>
+            <li>LIN, J., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_justina_cna.pdf">On the Coordination of
+                    Vulnerability Fixes - An Empirical Study of Practices from 13 CVE Numbering
+                    Authorities
+                </a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a
+                    href="publications/2024/emse_justina_cna.bib"><i>BibTeX</i></a></li>
+            <li>NAYEBI, M. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2306.15851">Image-based Communication on
+                    Social
+                    Coding Platforms</a>, Journal of Software: Evolution and Process (JSEP), Wiley, to appear.&nbsp;<a
+                    href="publications/2024/jsep_maleknaz.bib"><i>BibTeX</i></a></li>
+            
+            </ul>
+        <br />
+        <h3>Conference</h3>
+        <ul>
+            <li>
+                OLEWICKI, D., HABCHI, S., NAYROLLES, M., FARAMARZI, M., CHANDAR, S. and ADAMS, B. (2024). <a
+                    href="https://arxiv.org/abs/2305.09824">Towards Lifelong Learning for Software Analytics Models: Empirical Study
+                    on Brown Build and Risk Prediction</a>, in Proceedings of the Software Engineering In Practice (SEIP) track at
+                the 46th
+                International Conference on Software Engineering, ICSE (Lisbon, Portugal), to appear. (Acceptance
+                ratio: 45/120=37.5%)&nbsp;<a href="publications/2024/seip.bib"><i>BibTeX</i></a>
+            </li>
+        </ul>
+            <br /><br /><br /><br />
+    </div>
+    
+    <div class="content">
         <h2><a name="2023"></a>2023</h2>
         <br />
         <h3>Journal</h3>
         <ul>
-            <li>LIN, J., ADAMS, B. and HASSAN, A.E. (2023). <a href="publications/2023/emse_justina_cna.pdf">On the Coordination of
-                    Vulnerability Fixes - An Empirical Study of Practices from 13 CVE Numbering
-                    Authorities
-                </a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a
-                    href="publications/2023/emse_justina_cna.bib"><i>BibTeX</i></a></li>
-            <li>BAJAJ, R., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2023). <a
-                    href="publications/2023/emse_rahul.pdf">Unreproducible builds: Time to fix, causes, and correlation
+                    <li>BAJAJ, R., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2023). <a
+                            href="publications/2023/emse_rahul.pdf">Unreproducible builds: Time to fix, causes, and correlation
                     with
                     external ecosystem factors
-                </a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a
+                </a>, Empirical Software Engineering, 29(11), Springer.&nbsp;<a
                     href="publications/2023/emse_rahul.bib"><i>BibTeX</i></a></li>
-            <li>NAYEBI, M. and ADAMS, B. (2023). <a href="https://arxiv.org/abs/2306.15851">Image-based Communication on
-                    Social
-                    Coding Platforms</a>, Journal of Software: Evolution and Process (JSEP), Wiley, to appear.&nbsp;<a
-                    href="publications/2023/jsep_maleknaz.bib"><i>BibTeX</i></a></li>
             <li>FOUNDJEM, A., EGHAN, E.E. and ADAMS, B. (2023). <a href="publications/2023/tse_armstrong.pdf">A Grounded
                     Theory of Cross-community SECOs: Feedback
                     Diversity vs. Synchronization</a>, Transactions on Software Engineering
-                (TSE), IEEE, to appear.&nbsp;<a href="publications/2023/tse_armstrong.bib"><i>BibTeX</i></a></li>
+                (TSE), 49(10), p.4731-4750, IEEE.&nbsp;<a href="publications/2023/tse_armstrong.bib"><i>BibTeX</i></a></li>
             <li>CHEN, Y., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2023). <a
                     href="publications/2023/emse_yihao.pdf">On practitioners' concerns when adopting
                     service mesh frameworks
@@ -125,8 +154,6 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
             <li>LIN, J., ZHANG, H., ADAMS, B. and HASSAN, A.E. (2023). <a
                     href="https://sail.cs.queensu.ca/data/pdfs/2023_Vulnerability_management_in_Linux_distributions.pdf">Vulnerability
                     management in Linux distributions: An empirical study on Debian and Fedora
-                    Authors
-
                 </a>, Empirical Software Engineering, 28(2), Springer.&nbsp;<a
                     href="publications/2023/emse_justina.bib"><i>BibTeX</i></a></li>
         </ul>
