--- a/publications.html
+++ b/publications.html
@@ -86,7 +86,10 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
-            <li>
+        <li>MALIK, A., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_akshat_within.pdf">Towards
+                Graph-Anonymization of Software Analytics Data: Empirical Study on JIT Defect Prediction</a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a
+                href="publications/2024/emse_akshat_within.bib"><i>BibTeX</i></a></li>
+        <li>
                 OREAMUNO, E.L., KHAN, R.F., BANGASH, A.A., STINSON, C. and ADAMS, B. (2024). <a
                     href="publications/2024/ieeesw-ernesto.pdf">The
                     State of Documentation Practices of Third-party Machine Learning Models and Datasets</a>, IEEE Software, IEEE,
