Added 2 EMSE papers.

--- a/publications.html
+++ b/publications.html
@@ -86,6 +86,15 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
+        <li>ZHAO, Z., CHEN, Y., BANGASH, A.A., ADAMS, B. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2402.15990">An
+                Empirical Study of Challenges in Machine Learning Asset
+                Management</a>, Empirical Software
+          Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_jimmy_challenges.bib"><i>BibTeX</i></a></li>
+        <li>KAMATH, D.M., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2024). <a
+                href="publications/2024/emse_divya_timeout.pdf">On Combining Commit Grouping and Build Skip Prediction to Reduce
+                Redundant Continuous Integration Activity</a>, Empirical Software
+            Engineering, Springer, to appear.&nbsp;<a
+                href="publications/2024/emse_divya_timeout.bib"><i>BibTeX</i></a></li>
         <li>MALIK, A., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_akshat_within.pdf">Towards
                 Graph-Anonymization of Software Analytics Data: Empirical Study on JIT Defect Prediction</a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a
                 href="publications/2024/emse_akshat_within.bib"><i>BibTeX</i></a></li>
