--- a/publications.html
+++ b/publications.html
@@ -86,6 +86,10 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
+        <li>EBRAHIMI, E., ADAMS, B., OLIVA, G.A. and HASSAN, A.E. (2024). <a
+                href="https://sail.cs.queensu.ca/data/pdfs/2024_A_Large-Scale_Exploratory_Study_on_the_Proxy_Pattern_in_Ethereum.pdf">A
+                Large-Scale Exploratory Study on the Proxy Pattern in Ethereum</a>, Empirical Software
+            Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_amir_proxy.bib"><i>BibTeX</i></a></li>
         <li>ZHAO, Z., CHEN, Y., BANGASH, A.A., ADAMS, B. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2402.15990">An
                 Empirical Study of Challenges in Machine Learning Asset
                 Management</a>, Empirical Software
@@ -128,7 +132,9 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
             </li>
             <li>MACEDO, M., TIAN, Y., COGO, F. and ADAMS, B. (2024). <a hname="forge">Exploring the Impact of the Output Format on
                     the Evaluation of Large Language Models for Code Translation</a>, in Proceedings of the 2024 Special Event of AI
-              Foundation Models and Software Engineering (FORGE), to appear. (Acceptance ratio: 8/16=50%)&nbsp;<a href="publications/2024/forge.bib"><i>BibTeX</i></a> </li>
+                Foundation Models and Software Engineering (FORGE), to appear. (Acceptance ratio: 8/16=50%)&nbsp;<a
+                    href="publications/2024/forge.bib"><i>BibTeX</i></a></a>&nbsp;<span
+                    style="color: black; font-weight: bold">(Best Paper Award)</span></li>
         </ul>
             <br /><br /><br /><br />
     </div>
