--- a/publications.html
+++ b/publications.html
@@ -122,7 +122,13 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Conference</h3>
         <ul>
-            <li>
+        <li>
+            OLEWICKI, D., HABCHI, S. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2404.10703">An empirical study on code
+                review activity prediction in practice</a>, in Proceedings of the ACM
+            on Software Engineering (PACMSE), Issue FSE 2024 (Porto de Galinhas, Brazil), to appear. (Acceptance
+            ratio: 121/483=25.1%)&nbsp;<a href="publications/2024/fse.bib"><i>BibTeX</i></a>
+        </li>
+        <li>
                 OLEWICKI, D., HABCHI, S., NAYROLLES, M., FARAMARZI, M., CHANDAR, S. and ADAMS, B. (2024). <a
                     href="https://arxiv.org/abs/2305.09824">Towards Lifelong Learning for Software Analytics Models: Empirical Study
                     on Brown Build and Risk Prediction</a>, in Proceedings of the Software Engineering In Practice (SEIP) track at
