--- a/publications.html
+++ b/publications.html
@@ -136,7 +136,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                 International Conference on Software Engineering, ICSE (Lisbon, Portugal), to appear. (Acceptance
                 ratio: 45/120=37.5%)&nbsp;<a href="publications/2024/seip.bib"><i>BibTeX</i></a>
             </li>
-            <li>MACEDO, M., TIAN, Y., COGO, F. and ADAMS, B. (2024). <a hname="forge">Exploring the Impact of the Output Format on
+            <li>MACEDO, M., TIAN, Y., COGO, F. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2403.17214">Exploring the Impact
+                    of the Output Format on
                     the Evaluation of Large Language Models for Code Translation</a>, in Proceedings of the 2024 Special Event of AI
                 Foundation Models and Software Engineering (FORGE), to appear. (Acceptance ratio: 8/16=50%)&nbsp;<a
                     href="publications/2024/forge.bib"><i>BibTeX</i></a></a>&nbsp;<span
